# Hoist

./: .gitignore  Cargo.toml  README.md  hoist-adoption.md  hoist-implementation.md  hoist-spec.md  todos.md
examples/: run_demo.sh
examples/data/: sample_article.txt
examples/node/: demo.mjs
examples/programs/: 01_hello.hoist  02_text_pipeline.hoist  03_summarize.hoist  04_multi_step.hoist  05_classify.hoist  06_extract_structured.hoist
examples/python/: demo.py  ollama_handler.py
hoist-cli/: Cargo.toml
hoist-cli/src/: main.rs
hoist-core/: Cargo.toml
hoist-core/src/: ast.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  stdlib.rs  types.rs
hoist-core/tests/: integration_tests.rs
hoist-node/: Cargo.toml  package.json
hoist-node/src/: lib.rs
hoist-python/: Cargo.toml  pyproject.toml
hoist-python/src/: lib.rs
hoist-wasm/: Cargo.toml
hoist-wasm/src/: lib.rs
playground/: astro.config.mjs  package-lock.json  package.json
playground/src/components/: Editor.tsx
playground/src/layouts/: Base.astro
playground/src/pages/: index.astro  playground.astro  wllama-test.astro
