[package]
name = "hoist-node"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for the Hoist DSL (via napi-rs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
hoist-core = { path = "../hoist-core" }
napi = { version = "2", features = ["full", "serde-json"] }
napi-derive = "2"
serde_json = "1"
