[package]
name = "hoist-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Hoist DSL"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hoist-core = { path = "../hoist-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
